--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-         <div id="banner_wrap">
-            <a id="github_banner" href="{{ site.github.owner_url }}">GitHub</a>
-            <a id="twitter_banner" href="https://twitter.com/Koyomiyahouya">@Koyomiyahouya</a>
-          </div>
-          
-          <a id="toppage_link" href="{{ '/' | relative_url }}">
-            <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-            <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-          </a>
+          {% if site.github.is_project_page %}
+            <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          {% endif %}
 
           <h1 id="project_title">Koyomiya5438 Homepage</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
