--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <!-- add link to top page in header -->
           <a id="toppage_link" href="{{ '/' | relative_url }}">
-            <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+            <h1 id="project_title">Koyomiya5438 Homepage</h1>
             <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           </a>
 
