--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,17 +43,17 @@ p img {
 #github_banner {
   @extend %banner;
   background-image: url(../images/GitHub.svg);
-  background-color: #12982c;
+  background-color: #b922e3;
 }
 #twitter_banner {
   @extend %banner;
   background-image: url(../images/Twitter.svg);
   background-color: #1da1f2;
 }
-#connpass_banner {
+#wikipedia_banner {
   @extend %banner;
-  background-image: url(../images/connpass.svg);
-  background-color: #d11f00;
+  background-image: url(../images/wikipedia.svg);
+  background-color: #a9a9a9;
 }
 #toppage_link {
   display: block;
