--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,7 +52,7 @@ p img {
 }
 #wikipedia_banner {
   @extend %banner;
-  background-image: url(../images/wikipedia.svg);
+  background-image: url(../images/wikipedia.png);
   background-color: #a9a9a9;
 }
 #toppage_link {
