--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
           <div id="banner_wrap">
             <a id="github_banner" href="https://github.com/koyomiyahouya">GitHub</a>
             <a id="twitter_banner" href="https://twitter.com/koyomiyahouya">@koyomiyahouya</a>
+            <a id="wikipedia_banner" href="https://ja.wikipedia.org/wiki/利用者:コヨミヤ">利用者:コヨミヤ</a>
           </div>
 
           <!-- add link to top page in header -->
