--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
           <div id="banner_wrap">
             <a id="github_banner" href="https://github.com/koyomiyahouya">GitHub</a>
             <a id="twitter_banner" href="https://twitter.com/koyomiyahouya">@koyomiyahouya</a>
-            <a id="wikipedia_banner" href="https://ja.wikipedia.org/wiki/利用者:コヨミヤ">利用者:コヨミヤ</a>
+            <a id="wikipedia_banner" href="https://ja.wikipedia.org/wiki/利用者:コヨミヤ">Wikipedia</a>
           </div>
 
           <!-- add link to top page in header -->
@@ -33,12 +33,6 @@
             <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           </a>
 
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
         </header>
     </div>
 
