--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,7 @@ p img {
   font-size: 42px;
   line-height: 48px;
   padding: 16px 0 0 72px;
-  background: no-repeat url(../images/logo.svg) left/contain;
+  background: no-repeat url(../images/logo.png) left/contain;
 }
 .navbar {
   display: flex;
