--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,7 +43,7 @@ p img {
 #github_banner {
   @extend %banner;
   background-image: url(../images/GitHub.svg);
-  background-color: #b922e3;
+  background-color: black;
 }
 #twitter_banner {
   @extend %banner;
