--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,11 @@
         <p><span style="font-size:10pt">このページに書かれている情報は、特記なき場合<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">CC BY-SA 4.0</a>の下で利用可能です。</span></p>
       </footer>
     </div>
-
+    
+<!-- admax -->
+<script src="https://adm.shinobi.jp/s/4f2450ae9835992052cfc1f07b61e2a3"></script>
+<!-- admax -->
+    
     {% if site.google_analytics %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
