--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
     
 <!-- admax -->
 <script src="https://adm.shinobi.jp/s/4f2450ae9835992052cfc1f07b61e2a3"></script>
+<a href="https://adf.shinobi.jp/r/fa573d00b2a77a422d839c382bd28203"><img src="https://v2st.shinobi.jp/admax/friends/banner/admax/friends_manga_46860.png"></a>
 <!-- admax -->
     
     {% if site.google_analytics %}
