--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,12 +50,12 @@
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><span style="font-size:10pt">このページに書かれている情報は、特記なき場合<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">CC BY-SA 4.0</a>の下で利用可能です。</span></p>
+        <p>PR:<a href="https://adf.shinobi.jp/r/fa573d00b2a77a422d839c382bd28203">Ninja Admax</a>
       </footer>
     </div>
     
 <!-- admax -->
 <script src="https://adm.shinobi.jp/s/4f2450ae9835992052cfc1f07b61e2a3"></script>
-<a href="https://adf.shinobi.jp/r/fa573d00b2a77a422d839c382bd28203"><img src="https://v2st.shinobi.jp/admax/friends/banner/admax/friends_manga_46860.png"></a>
 <!-- admax -->
 <!--shinobi1-->
 <script type="text/javascript" src="//xa.shinobi.jp/ufo/190731000"></script><noscript><a href="//xa.shinobi.jp/bin/gg?190731000" target="_blank"><img src="//xa.shinobi.jp/bin/ll?190731000" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript>
