--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><span style="font-size:10pt">このページに書かれている情報は、特記なき場合<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">CC BY-SA 4.0</a>の下で利用可能です。</span></p>
+        <p><span style="font-size:10pt">このページに書かれているソースコードは、特記なき場合は<a href="https://opensource.org/licenses/mit-license.php">MIT License</a>の下で、内容は<a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ja">CC BY-SA 4.0</a>の下で利用可能です。</span></p>
         <p>PR:<a href="https://adf.shinobi.jp/r/fa573d00b2a77a422d839c382bd28203">Ninja Admax</a>
       </footer>
     </div>
