--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <a rel="me" href="https://mastodon.cloud/@koyomiya">Mastodon</a>
 
 {% seo %}
 
@@ -33,6 +32,8 @@
             <h1 id="project_title">Koyomiya5438 Homepage</h1>
             <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           </a>
+          
+          <a rel="me" href="https://fedibird.com/@koyomiya">Mastodon</a>
 
         </header>
     </div>
