--- a/conveni/light-theme.css
+++ b/conveni/light-theme.css
@@ -1,4 +1,8 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+@font-face{
+  font-family: 'SAOUI-Regular';
+      src: url('../SAOUI-Regular.woff') format('woff');
+}
 html{
     padding: 0px;
     margin: 0px;
@@ -7,7 +11,7 @@ body{
     padding: 0px;
     margin: 0px;
     background-color: gainsboro;
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'SAOUI-Regular', 'Noto Sans JP', sans-serif;
 }
 .highlight{
     background-color:yellow;
