--- a/conveni/light-theme.css
+++ b/conveni/light-theme.css
@@ -1,6 +1,6 @@
 @font-face{
-  font-family: 'kokug';
-  src: url('/font_1_kokugl_1.15_rls.woff') format('woff');
+  font-family: 'kikai';
+  src: url('/KikaiChokokuJIS-Md.woff') format('woff');
 }
 html{
     padding: 0px;
@@ -10,7 +10,7 @@ body{
     padding: 0px;
     margin: 0px;
     background-color: gainsboro;
-    font-family: 'Helvetica', 'kokug', sans-serif;
+    font-family: 'Helvetica', 'kikai', sans-serif;
 }
 .highlight{
     background-color:yellow;
