--- a/conveni/dark-theme.css
+++ b/conveni/dark-theme.css
@@ -1,6 +1,6 @@
 @font-face{
-  font-family: 'kikai';
-  src: url('/KikaiChokokuJIS-Md.woff') format('woff');
+  font-family: 'highway';
+  src: url('/GDhwGoJA-OTF112b2.woff') format('woff');
 }
 html{
     padding: 0px;
@@ -10,7 +10,7 @@ body{
     padding: 0px;
     margin: 0px;
     background-color: #333333;
-    font-family: 'Helvetica', 'kikai', sans-serif;
+    font-family: 'Helvetica', 'highway', sans-serif;
 }
 .highlight{
     background-color:yellow;
