--- a/conveni/light-theme.css
+++ b/conveni/light-theme.css
@@ -2,7 +2,7 @@
   font-family: 'kikai';
   src: url('/KikaiChokokuJIS-Md.woff') format('woff');
 }
-@import url(https://use.typekit.net/phn7ysn.css);
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 html{
     padding: 0px;
     margin: 0px;
