--- a/conveni/light-theme.css
+++ b/conveni/light-theme.css
@@ -11,7 +11,7 @@ body{
     padding: 0px;
     margin: 0px;
     background-color: gainsboro;
-    font-family: 'josefin-sans', 'kikai', sans-serif;
+    font-family: 'Oswald', 'kikai', sans-serif;
 }
 .highlight{
     background-color:yellow;
