--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,9 @@
 ---
 ---
-
+@font-face{
+  font-family: 'CJK';
+  src: url('/NotoSansCJKjp-Regular.woff') format('woff');
+ @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap'); 
 @import "{{ site.theme }}";
 :focus {
   outline: none;
@@ -8,6 +11,7 @@
 body {
   overflow-wrap: break-word;
   overflow-y: scroll;
+  font-family: 'Oswald', 'CJK', sans-serif;
 }
 code {
   overflow-wrap: normal;
