--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -1,5 +1,8 @@
 @import "rouge-github";
-
+@font-face{
+  font-family: 'CJK';
+  src: url('/NotoSansCJKjp-Regular.woff') format('woff');
+ @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 /*******************************************************************************
 MeyerWeb Reset
 *******************************************************************************/
@@ -48,7 +51,7 @@ body {
   color:#373737;
   background: #212121;
   font-size: 16px;
-  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+  font-family: 'CJK', 'Oswald', sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -57,7 +60,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
+  font-family: 'CJK', 'Helvetica', sans-serif;
   letter-spacing: -1px;
 }
 
