--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -51,7 +51,7 @@ body {
   color:#373737;
   background: #212121;
   font-size: 16px;
-  font-family: 'CJK', 'Oswald', sans-serif;
+  font-family: 'Oswald', 'CJK', sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
-  font-family: 'CJK', 'Helvetica', sans-serif;
+  font-family: 'Helvetica', 'CJK', sans-serif;
   letter-spacing: -1px;
 }
 
