--- a/conveni/light-theme.css
+++ b/conveni/light-theme.css
@@ -1,8 +1,4 @@
-@font-face{
-  font-family: 'kikai';
-  src: url('/KikaiChokokuJIS-Md.woff') format('woff');
-}
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Zen+Kaku+Gothic+New&display=swap');
 
 html{
     padding: 0px;
@@ -12,7 +8,7 @@ body{
     padding: 0px;
     margin: 0px;
     background-color: gainsboro;
-    font-family: 'Didact Gothic', 'kikai', sans-serif;
+    font-family: 'Didact Gothic', 'Zen Kaku Gothic New', sans-serif;
 }
 .highlight{
     background-color:yellow;
