--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,8 +47,8 @@ p img {
 }
 #twitter_banner {
   @extend %banner;
-  background-image: url(../images/Twitter.svg);
-  background-color: #1da1f2;
+  background-image: url(../images/logo-black.png);
+  background-color: black;
 }
 #wikipedia_banner {
   @extend %banner;
