--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,7 @@
 
           <!-- change forkme_banner url and text / add twitter and connpass banners -->
           <div id="banner_wrap">
-            <a id="github_banner" href="https://github.com/koyomiyahouya">GitHub</a>
-            <a id="twitter_banner" href="https://twitter.com/koyomiyahouya">Twitter</a>
+            <a id="twitter_banner" href="https://twitter.com/koyomiyahouya">X (Twitter)</a>
             <a id="wikipedia_banner" href="https://ja.wikipedia.org/wiki/利用者:コヨミヤ">Wikipedia</a>
           </div>
 
