--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,7 +48,7 @@ p img {
 #twitter_banner {
   @extend %banner;
   background-image: url(../images/logo-black.png);
-  background-color: black;
+  background-color:white;
 }
 #wikipedia_banner {
   @extend %banner;
